# distilkit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PROFILING.md  README.md  distilkit.desktop  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  install_desktop.sh  pyproject.toml  requirements.txt  run_gui.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: basic_classifier.py
prometheus/: alert_rules.yml  prometheus.yml
prometheus/dashboards/: distilkit.json
scripts/: distill.sh  measure_perf.py
src/: __init__.py  alert_manager.py  benchmarks.py  circuit_breaker.py  cli.py  datasets.py  distiller.py  log_config.py  onnx_export.py  pipeline.py  settings.py  student.py  task_manager.py  teacher.py  tracing.py  webapp.py  webapp_middleware.py  webapp_models.py  webapp_routes.py
src/templates/: index.html
tests/: __init__.py  test_cli.py  test_coverage.py  test_distiller.py  test_integration.py  test_regression.py  test_webapp.py
