[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "distilkit"
version = "0.1.0"
description = "Knowledge distillation framework — compress large models into fast, deployable student models"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Luis Daniel Dos Santos", email = "luisdossantos2001@gmail.com"},
]
keywords = ["deep-learning", "knowledge-distillation", "model-compression", "pytorch", "onnx"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",
    "numpy>=1.26.0",
    "tqdm>=4.67.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=6.0"]

[project.scripts]
distilkit = "src.cli:main"
distilkit-gui = "src.webapp:launch"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--tb=short",
    "--no-header",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/templates/*"]

[tool.coverage.report]
# Enforce ≥74% coverage on the src/ package.
fail_under = 74
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
